fixed the apply button at bottom of left column not centering. added some more spacing. need to clean up css layout.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 .navbar-text{
-    margin-bottom: 10px; /* Adjust the value as needed */
+    margin-bottom: 10px;
 }
 .btn {
     background-color: lightgreen;
@@ -12,6 +12,19 @@
      padding-bottom: 10px;
      text-align: center;
  }
- p {
-     padding-bottom: 50px;
- }
+.container-fluid.bg-light .col-md-6 p {
+    margin-bottom: 20px;
+}
+.container-fluid.bg-light .col-md-6 i {
+    padding-bottom: 20px;
+}
+.btn2{
+    text-align: center;
+}
+.container-fluid.bg-light .col-md-6 .d-flex {
+    margin-top: 60px;
+}
+.container-fluid.bg-light .col-md-6 i {
+    padding-bottom: 20px;
+    margin-bottom: 40px;
+}
